--- a/autocannon/package.json
+++ b/autocannon/package.json
@@ -7,7 +7,8 @@
     "start": "node --preserve-symlinks index.js"
   },
   "dependencies": {
-    "autocannon": "^2.2.0"
+    "autocannon": "^2.2.0",
+    "jsprim": "^2.0.0"
   },
   "engines": {
     "node": ">=8.6.0"
