--- a/autocannon/package.json
+++ b/autocannon/package.json
@@ -4,7 +4,7 @@
   "description": "Bedrock module that provides HTTP endpoints.",
   "main": "index.js",
   "scripts": {
-    "start": "node --preserve-symlinks index.js"
+    "start": "NODE_ENV=production node --preserve-symlinks index.js"
   },
   "dependencies": {
     "autocannon": "^2.2.0",
