Implement ed25519 sigs.

--- a/autocannon/package.json
+++ b/autocannon/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "autocannon": "^2.2.0",
+    "chloride": "digitalbazaar/chloride#genericHash",
     "jsprim": "^2.0.0"
   },
   "engines": {
