--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "bedrock-docs": "^2.1.0",
     "bedrock-express": "^2.0.6",
     "bedrock-identity": "^4.6.0",
-    "bedrock-key": "^4.1.0",
+    "bedrock-key": "digitalbazaar/bedrock-key#ed25519",
     "bedrock-ledger-context": "^1.0.0",
     "bedrock-mongodb": "^5.1.2",
     "bedrock-passport": "digitalbazaar/bedrock-passport#master",
